results/SpecGenBench/4-shot/log-TwoSum-2023_11_28_02_19_40.txt
class TwoSum {
    //@ requires nums != null;
    //@ ensures (\exists int i; 0 <= i && i < \result.length; nums[\result[i]] + nums[\result[i+1]] == target);
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ maintaining (\forall int i; 0 <= i && i < n; (\forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target));
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ maintaining (\forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target);
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:6: error: variable i is already defined in method twoSum(int[],int)
        //@ maintaining (\forall int i; 0 <= i && i < n; (\forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target));
                                     ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:9: error: variable j is already defined in method twoSum(int[],int)
            //@ maintaining (\forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target);
                                         ^
2 errors

